# tie

./: .gitignore  LICENSE  README.md  keyboard.yaml  options.yaml  pyproject.toml  setup.py  test.py  texts.tie.yaml  tie.yaml
tie/: __version__.py  core.py  exceptions.py
