[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tie"
version = "0.1.0"
description = "Lightweight internationalization library for Python"
authors = [{name = "Maksim Panov", email = "panovo@essent.space"}]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["pyyaml", "babel>=2.12.1", "packaging", "typing_extensions"]

